--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&subset=japanese" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+</head>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
